--- a/index.html
+++ b/index.html
@@ -14,17 +14,27 @@
   <body>
       <div class="container">
           <div class="row row1">
-              <div class="col-lr-12">
-                <h1 id="title"> Too Many Democrats!! </h1>
-                <h3>  </h3>
-
+              <div class="col-lg-12">
+                <div class="card" id="introduction">
+                  <p> We have so many democrats running for president, it can be hard to keep them all straight.  Take this timed quiz to learn more about the many democrats running for president in 2020.</p>
+                  <img src="assets/images/allcandidates.jpeg" id="start-image">
+                  <button class="btn" id="get-started">Get Started</button>
+                </div>
+      <div class="container">
+            <div class="col-lg-8">
+              <div class="card" id="question-card">
+                <h1 id="time-remaining"> Time Left: </h1>
+              
+              </div>
+            </div>
+      </div>
               </div>
           </div>
       </div>
 
 
 <!------------Javascript Links ------------------>
-      <link rel="stylesheet" href="assets/javascript/app.js">
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+      <script src="assets/javascript/app.js"></script>
    </body>
 </html>
