--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
             <div class="col-lg-12">
               <div class="card" id="question-card">
                 <div class="card-title" id="question"></div>
-                <div class="card-body"  id="multiple-choice"></div>
+                <form class="card-body"  id="multiple-choice"></form>
+                <button id="submit"> Submit </button>
                 <h1 id="time-remaining"></h1>
               
               </div>
