--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   </head>
   <body>
     <div class="container" id="card-one">
-      <div class="row row1">
+      <div class="row">
         <div class="col-md-12">
           <div class="card" id="introduction">
                   <p> We have so many democrats running for president, it can be hard to keep them all straight.  Take this timed quiz to learn more about the many democrats running for president in 2020.</p>
@@ -23,13 +23,29 @@
         </div>
       </div>
     </div> 
+    <br>
     <div class="container"  id="card-two">
-      <div class="col-md-12">
-        <div class="card" id="question-card">
-          <div class="card-title" id="question"></div>
+      <div class="row">
+        <div class="col-md-12">
+          <div class="card" id="question-card">
+            <div class="card-title" id="question"></div>
             <form class="card-body"  id="multiple-choice"></form>
             <button id="submit"> Submit </button>
             <h1 id="time-remaining"></h1>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="container" id="card-three">
+      <div class="row">
+        <div class="col-md-12">
+          <div class="card" id="answer-card">
+              <div class="card-title" id="result"></div>
+              <div class="card-body">
+<!--------Add Image and Paragraph Here with Links Hopefully---------->
+              </div>
+
+          </div>
         </div>
       </div>
     </div>
