--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="icon" href="assets/images/favicon.ico" type="image/x-icon"/>
 
     <title> Too Many Democrats! </title>
   </head>
@@ -39,9 +40,10 @@
     <div class="container" id="card-three">
       <div class="row">
         <div class="col-md-12">
-          <div class="card" id="answer-card">
+          <div class="card" id="answer-card-right">
               <div class="card-title" id="result"></div>
               <div class="card-body">
+                <p id="tally"> Score: </p>
 <!--------Add Image and Paragraph Here with Links Hopefully---------->
               </div>
 
