--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <div class="container" id="card-three">
       <div class="row">
         <div class="col-md-12">
-          <div class="card" id="answer-card-right">
+          <div class="card" id="answer-card">
               <div class="card-title" id="result"></div>
               <div class="card-body">
                 <p id="tally"> Score: </p>
