--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
           <div class="card" id="answer-card">
               <div class="card-title" id="result"></div>
               <div class="card-body">
-                <p id="tally"> Score: </p>
-<!--------Add Image and Paragraph Here with Links Hopefully---------->
+              <img id="images">
+
               </div>
 
           </div>
