--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <div class="container"  id="card-two">
       <div class="row">
         <div class="col-md-12">
-          <div class="card" id="question-card" style=>
+          <div class="card" id="question-card">
             <div class="card-title" id="question"></div>
             <form class="card-body"  id="multiple-choice"></form>
             <button id="submit"> Submit </button>
@@ -40,9 +40,10 @@
     <div class="container" id="card-three">
       <div class="row">
         <div class="col-md-12">
-          <div class="card" id="answer-card" style=>
+          <div class="card" id="answer-card">
               <div class="card-title" id="result"></div>
               <div class="card-body" id="images"></div>
+                
               </div>
 
           </div>
